# Parallel_programming_pattern

./: .gitignore  CMakeLists.txt  README.md  mp1_implement.cu  mp2_implement.cu  mp3_implement.cu  mp4_implement.cu
reduce/: reduce_baseline.cu  reduce_basic.cu  reduce_warp_divergence.cu
sgemm/: sgemm_baseline.cu  sgemm_shared_tiling.cu  sgemm_thread_tiling.cu  sgemm_thread_tiling_float4.cu
test/: test_generator.cpp
utils/: generator.h
